# Discordpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  DiscordppConfig.h  DiscordppConfig.h.in  Makefile  README.md  cmake_install.cmake  gdbstuff  test.cpp  test.db  test2.cpp
example/: AddStreamCommand.cpp  AddStreamCommand.hpp  DisboardBumper.cpp  DisboardBumper.hpp  StreamNotifier.cpp  StreamNotifier.hpp  main.cpp
src/: gdb.txt
src/discordpp/: Bot.cpp  Bot.hpp  Discordpp.cpp  Discordpp.hpp  Gateway.cpp  Gateway.hpp  constants.hpp  jsonutils.hpp
src/discordpp/Commands/: Command.cpp  Command.hpp  CommandIncludes.hpp  CommandManager.hpp  PingCommand.cpp  PingCommand.hpp
src/discordpp/Core/: Discordpp.cpp  Discordpp.hpp
src/discordpp/Core/Databases/: SQLiteDatabase.cpp  SQLiteDatabase.hpp
src/discordpp/Core/Rest/: DiscordAPI.cpp  DiscordAPI.hpp  PicartoAPI.cpp  PicartoAPI.hpp  RestAPI.cpp  RestAPI.hpp  TwitchAPI.cpp  TwitchAPI.hpp
src/discordpp/Core/WebSocket/: Gateway.cpp  Gateway.hpp
src/discordpp/Events/: ChannelCreateEvent.cpp  ChannelCreateEvent.hpp  DiscordEvent.hpp  DispatchEvent.cpp  DispatchEvent.hpp  Event.cpp  Event.hpp  EventData.hpp  GuildCreateEvent.cpp  GuildCreateEvent.hpp  HeartbeatACKEvent.cpp  HeartbeatACKEvent.hpp  HeartbeatEvent.hpp  HelloEvent.cpp  HelloEvent.hpp  MessageCreateEvent.cpp  MessageCreateEvent.hpp  MessageReactionAddEvent.cpp  MessageReactionAddEvent.hpp  PresenceUpdateEvent.hpp  ReadyEvent.cpp  ReadyEvent.hpp  TypingStartEvent.cpp  TypingStartEvent.hpp
src/discordpp/Guilds/: Guild.cpp  Guild.hpp  GuildManager.cpp  GuildManager.hpp
src/discordpp/Managers/: CommandManager.cpp  CommandManager.hpp  GuildManager.hpp  UserManager.hpp
src/discordpp/Money/: MoneyManager.cpp  MoneyManager.hpp
src/discordpp/Money/Commands/: ClaimMoneyCommand.cpp  ClaimMoneyCommand.hpp  DailyMoneyCommand.cpp  DailyMoneyCommand.hpp  LeaderboardCommand.cpp  LeaderboardCommand.hpp
src/discordpp/Objects/: Channel.cpp  Channel.hpp  Emoji.cpp  Emoji.hpp  Guild.cpp  Guild.hpp  Message.cpp  Message.hpp  Role.cpp  Role.hpp  Snowflake.cpp  Snowflake.hpp  User.cpp  User.hpp
src/discordpp/Tasks/: HeartbeatTask.cpp  HeartbeatTask.hpp  Task.cpp  Task.hpp
src/discordpp/Users/: User.cpp  User.hpp  UserManager.cpp  UserManager.hpp
src/discordpp/Util/: Singleton.hpp  Timestamp.hpp  constants.hpp
src/discordpp/commands/: AboutCommand.cpp  AboutCommand.hpp  CommandIncludes.hpp  CommandManager.cpp  CommandManager.hpp  PingCommand.cpp
src/discordpp/databases/: SQLiteDatabase.cpp  SQLiteDatabase.hpp
src/discordpp/events/: ChannelCreateEvent.hpp  DispatchEvent.cpp  DispatchEvent.hpp  Event.cpp  Event.hpp  EventIncludes.hpp  GuildCreateEvent.cpp  GuildCreateEvent.hpp  HeartbeatACKEvent.hpp  HelloEvent.cpp  HelloEvent.hpp  MessageCreateEvent.cpp  MessageCreateEvent.hpp  MessageReactionAddEvent.cpp  MessageReactionAddEvent.hpp  MessageReactionRemoveEvent.cpp  MessageReactionRemoveEvent.hpp  MessageUpdateEvent.cpp  MessageUpdateEvent.hpp  PresenceUpdateEvent.cpp  PresenceUpdateEvent.hpp  ReadyEvent.cpp  ReadyEvent.hpp  TypingStartEvent.hpp
src/discordpp/guilds/: Guild.cpp  Guild.hpp  GuildManager.cpp  GuildManager.hpp
src/discordpp/money/: Money.cpp  Money.hpp  MoneyManager.cpp  MoneyManager.hpp
src/discordpp/money/Commands/: ClaimMoneyCommand.cpp
src/discordpp/money/commands/: ClaimMoneyCommand.hpp  DailyMoneyCommand.cpp  DailyMoneyCommand.hpp  LeaderboardCommand.cpp  LeaderboardCommand.hpp
src/discordpp/money/reaction/: ClaimMoneyReaction.cpp  ClaimMoneyReaction.hpp
src/discordpp/objects/: Channel.cpp  Channel.hpp  Emoji.cpp  Emoji.hpp  Message.cpp  Message.hpp  Role.hpp  Snowflake.cpp  Snowflake.hpp
src/discordpp/reactions/: ReactableMessage.cpp  ReactableMessage.hpp  ReactionManager.cpp  ReactionManager.hpp
src/discordpp/rest/: DiscordAPI.cpp  DiscordAPI.hpp  PicartoAPI.cpp  PicartoAPI.hpp  RestAPI.cpp  RestAPI.hpp  TwitchAPI.cpp  TwitchAPI.hpp
src/discordpp/tasks/: DistributeMoneyTask.cpp  DistributeMoneyTask.hpp  HeartbeatTask.hpp  Task.cpp  Task.hpp
src/discordpp/users/: User.cpp  User.hpp  UserManager.cpp  UserManager.hpp
src/discordpp/util/: Snowflake.hpp  constants.hpp  jsonutils.hpp  randomizer.hpp
src/discordpp/websocket/: Gateway.cpp
src/example/: AddStreamCommand.hpp  PicartoCommand.cpp  PicartoCommand.hpp  PicartoNotifier.cpp  PicartoNotifier.hpp  StreamNotifier.cpp  main.cpp  structs.hpp
